# numerical-analysis

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  data.cpp  main.cpp  operator.cpp
src/: CMakeLists.txt  LU_decomposition.hpp  calculation.hpp  data.cpp  data.hpp  gaussian_elimination.hpp  inverse_matrix.hpp  inverse_matrix_test.hpp  iterative_method.hpp  mat_utils.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  LU_decomposition_test.cpp  calculation_test.cpp  comparison_test.cpp  construct.cpp  definition_test.cpp  gaussian_elimination_test.cpp  inverse_matrix.cpp  inverse_matrix_test.cpp  iterative_method_test.cpp  norm.cpp  norm_test.cpp  numerical-analysis-test.cpp
